<resources>
    <string name="app_name">practical3</string>
    <string name="age">Age</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="smoker">smoker</string>
    <string name="yes">yes</string>
    <string name="calculate">calculate</string>
    <string name="reset">reset</string>
    <string name="insurance">insurance Premium</string>
    <string-array name="age_groups">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
